# mesh

./: .gitignore  AGENTS.md  Cargo.toml  DESIGN.md  DEVELOPMENT.md  GRAMMAR.md  LICENSE-MIT  PARSER.md  README.md  ROADMAP.md  TODO.md  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
crates/mesh/: Cargo.toml
crates/mesh-core/: Cargo.toml
crates/mesh-core/src/: builtins.rs  completion.rs  exec.rs  expand.rs  funcs.rs  lexer.rs  lib.rs  parser.rs  repl.rs  vars.rs
crates/mesh-core/tests/: lexer_api.rs
crates/mesh-platform/: Cargo.toml
crates/mesh-platform/src/: lib.rs
crates/mesh/src/: builtins.rs  exec.rs  expand.rs  lexer.rs  main.rs  repl.rs
crates/mesh/tests/: cli.rs
docs/: INTRO.md  PROMPT.md  REFERENCE.md  TOUR.md  _config.yml
docs/_layouts/: default.html
scripts/: dvorak
