[package]
name = "mesh-core"
version = "0.0.0"
description = "Core lexer, expansion, and runtime for the mesh shell."
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
glob = "0.3.3"
libc = "0.2.186"
reedline = "0.49.0"

[dev-dependencies]
mesh-platform = { path = "../mesh-platform" }
