[package]
name = "mesh-core"
version.workspace = true
description = "Core lexer, expansion, and runtime for the mesh shell."
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
chrono = "0.4.44"
glob = "0.3.3"
libc = "0.2.186"
nucleo-matcher = "0.3.1"
reedline = { version = "0.49.0", features = ["sqlite"] }
regex = "1.11.3"
rusqlite = "0.40.1"
unicode-segmentation = "1.12.0"

[dev-dependencies]
mesh-platform = { path = "../mesh-platform" }
