[package]
name = "mesh"
version = "0.0.0"
description = "An interactive-first Unix shell (pre-alpha; M0 build track)."
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

# reedline provides interactive line editing, history, and Ctrl-C/Ctrl-D
# handling. It is used only for interactive (TTY) input; piped input keeps the
# std-only byte reader, so the integration tests stay dependency-light. Further
# interactive deps (nix for job control) arrive with the tasks that need them —
# see ../../ROADMAP.md.
[dependencies]
reedline = "0.49.0"
