[package]
name = "mesh"
version.workspace = true
description = "An interactive-first Unix shell (pre-alpha; M0 build track)."
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

# The executable stays intentionally thin; all shell behavior lives in the
# library crate so it can be reused and tested independently.
[dependencies]
mesh-core = { path = "../mesh-core" }

[dev-dependencies]
libc = "0.2.186"
mesh-platform = { path = "../mesh-platform" }
